// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadStatus displays progress bar when progress is greater than 5% correctly 1`] = `
<View
  accessibilityLabel="Upload 50 percent complete"
  accessible={true}
>
  <View>
    <View
      accessibilityLabel="Upload in progress"
      style={
        [
          [
            {
              "position": "absolute",
            },
          ],
        ]
      }
      testID="UploadIcon.progress.undefined"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#454545",
              "fontSize": 15,
            },
            undefined,
            {
              "fontFamily": "INatIcon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
    <CircularProgress
      activeStrokeColor="#454545"
      activeStrokeWidth={2}
      inActiveStrokeOpacity={0}
      maxValue={1}
      radius={18}
      showProgressValue={false}
      testID="UploadStatus.CircularProgress"
      value={0.5}
    />
  </View>
</View>
`;

exports[`UploadStatus displays progress bar when progress is less than 5% correctly 1`] = `
<View
  accessibilityLabel="Saved observation, in queue to upload"
  accessible={true}
>
  <View>
    <View
      accessibilityLabel="Upload in progress"
      style={
        [
          [
            {
              "position": "absolute",
            },
          ],
        ]
      }
      testID="UploadIcon.progress.undefined"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#454545",
              "fontSize": 15,
            },
            undefined,
            {
              "fontFamily": "INatIcon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
    <View
      animatedStyle={
        {
          "value": {
            "transform": [
              {
                "rotateZ": "0deg",
              },
            ],
          },
        }
      }
      collapsable={false}
      style={
        [
          {
            "transform": [
              {
                "rotateZ": "0deg",
              },
            ],
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#454545",
              "fontSize": 33,
            },
            undefined,
            {
              "fontFamily": "INatIcon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
